[metadata]
name = pydis
version = 0.8.1
author = Masa Nakamura
author_email = masayang@hotmail.com
description = Python wrappers for StrictRedis
description-file=README.md
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/masayang/py_redis
project_urls = 
    Bug Tracker = https://github.com/masayang/py_redis/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    redis
    python_dotenv

[options.packages.find]
where = src

